# Lab_Automation

./: .gitignore  Combined_Sensors.ino  Festo_Multiple.ino  README.md  app.py  blank.yaml  command_invoker.py  command_sequence.py  dashapp-tut.py  dashapp.py  data.csv  e1.yaml  e2.yaml  e3.yaml  main.py  mongodb_helper.py  out.json  project_const.py  recipe_tool.py  requirements.txt  robot_arm_poses.yaml  setup.cfg  temp1.py  temp2.py  to_load.yaml  to_save.yaml  util.py
aamp_app/: aamp_app.py  app.py  command_invoker.py  run_app.py  util.py
commands/: command.py  dummy_heater_commands.py  dummy_meter_commands.py  dummy_motor_commands.py  festo_solenoid_valve_commands.py  heating_stage_commands.py  keithley_2450_commands.py  kinova_arm_commands.py  linear_stage_150_commands.py  mfc_commands.py  mks_mkc_commands.py  multi_stepper_commands.py  newport_esp301_commands.py  oxygen_sensor_commands.py  psd6_syringe_pump_commands.py  sht85_sensor_commands.py  sonicator_commands.py  stellarnet_spectrometer_commands.py  utility_commands.py  ximea_camera_commands.py
db/: gridfs.py
devices/: .gitignore  PSD6.py  README.md  Sonicator.py  device.py  dummy_heater.py  dummy_meter.py  dummy_motor.py  dummy_motor_source.py  festo_solenoid_valve.py  heating_stage.py  humidity_sensor.py  keithley_2450.py  kinova_arm.py  linear_stage_150.py  mfc.py  mks_mfc.py  mts50_z8.py  multi_stepper.py  newport_esp301.py  oxygen_sensor.py  psd6_syringe_pump.py  robot_arm_poses.yml  sht85_sensor.py  stellarnet_spectrometer.py  ximea_camera.py
examples/: .gitignore  README.md  example1.py  (+4 more)
(+133 files in other folders)
