[metadata]
name = aamp_app
version = 2023.07.27
author = Piyush Pahuja
author_email = ppahuja2@illinois.edu
maintainer = Piyush Pahuja
maintainer_email = ppahuja2@illinois.edu
description = AAMP App for Diao Group
long_description = file: README.md
long_description_content_type = text/x-markdown; charset=UTF-8
url = https://github.com/changhwang/Lab_Automation


[options]
packages = 
    aamp_app
include_package_data = True

install_requires = 
    certifi
    colorama
    dash
    dash-ace
    dash-bootstrap-components
    dash-table
    mfc
    pandas
    pdoc
    Pillow
    pymongo
    pyserial
    PyVISA
    pyyaml
    questionary
    scipy
    slackclient
    ximea-py

[options.entry_points]
console_scripts = 
    run_app = aamp_app.run_app:main
